<resources>
    <string name="app_name">FinalProject</string>

    <!--bank card resources-->
    <string name="bank_name">HZ BANK</string>
    <string name="balance_title">Balance:</string>

    <!--detail screen fragment-->
    <string name="currency_detail_toolbar">Buy the currency</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="rate_default_hint">0</string>

    <!--main screen fragment-->
    <string name="currency_title">Currency</string>
    <string name="see_all">See all</string>
    <string name="good_morning">Good Morning,</string>
    <string name="user_name">%1$s %2$s</string>

    <!--currency item-->
    <string name="item_logo">Item logo</string>

    <!--network error dialog-->
    <string name="unknown_error">Unknown error</string>
    <string name="unknown_balance">Unknown error with balance. Reinstall app.</string>
    <string name="buy">BUY</string>

    <!--balance-->
    <string name="set_balance">\u0024 %,.2f</string>

    <!--bottom navigation view-->
    <string name="home">Home</string>
    <string name="cards">Cards</string>
    <string name="profile">Profile</string>
    <string name="setting">Settings</string>
    <string name="transactions">Transactions</string>
    <string name="settings">Settings</string>

    <!--settings-->
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="change_username">Change username</string>
    <string name="change_avatar">Change avatar</string>
    <string name="user_settings">Profile</string>
    <string name="auth_title">Enable authentication for currency transactions</string>
    <string name="authentication_title">Confirmation of a currency transaction</string>
    <string name="change_profile">Change Profile</string>
    <string name="positive_button">OK</string>
    <string name="operations">Operations</string>

    <!--sms receiver-->
    <string name="phone_number">Phone number: %1$s</string>
    <string name="wrong_phone_number">Inappropriate number</string>
    <string name="permissions_granted">Permission Granted</string>
    <string name="permissions_denied">Permission Denied</string>


    <!--currency symbols-->
    <string name="us_character">%,.2f \u0024</string>     <!--Символ американского доллара-->
    <string name="ca_character">%,.2f \u0024</string>     <!--Символ канадского доллара-->
    <string name="ch_character">%,.2f \u20a3</string>     <!--Символ китайского юаня-->
    <string name="cn_character">%,.2f \u00a5</string>     <!--Символ китайского юаня-->
    <string name="dk_character">%,.2f DKR</string>        <!--Символ датской кроны-->
    <string name="er_character">%,.2f \u20ac</string>     <!--Символ евро-->
    <string name="gb_character">%,.2f \u00a3</string>     <!--Символ фунта стерлингов-->
    <string name="jp_character">%,.2f \u00a5</string>     <!--Символ японской иены-->
    <string name="no_character">%,.2f NKR</string>        <!--Символ норвежской кроны-->
    <string name="ru_character">%,.2f \u20bd</string>     <!--Символ российского рубля-->
    <string name="se_character">%,.2f SEK</string>        <!--Символ шведской кроны-->
    <string name="sg_character">%,.2f \u0024</string>     <!--Символ сингапурского доллара-->

    <!--currency full name-->
    <string name="gb_fullname">Фунт стерлингов</string>
    <string name="er_fullname">Евро</string>
    <string name="ch_fullname">Швейцарский франк</string>
    <string name="ca_fullname">Канадский доллар</string>
    <string name="sg_fullname">Сингапурский доллар</string>
    <string name="cn_fullname">Китайский юань</string>
    <string name="dk_fullname">Датская крона</string>
    <string name="no_fullname">Норвежская крона</string>
    <string name="se_fullname">Шведская крона</string>
    <string name="ru_fullname">Российский рубль</string>
    <string name="jp_fullname">Иена</string>

    <!--currency description-->
    <string name="us_description">Доллар – национальная валюта США, мировая резервная валюта, равняется 100 центам.
        Международный банковский код – USD, обозначается символом $.
        Эмиссию осуществляет выполняющая в США функцию центрального банка Федеральная резервная система.
        Доллар США имеет статус официальной государственной валюты в ряде других стран.</string>
    <string name="gb_description">
        Фунт стерлингов - национальная валюта Великобритании, параллельная валюта земель Гернси и Джерси, о. Мэн и законное средство платежа на Фолклендских островах, Гибралтаре, островах Вознесения, Св. Елены, Тристан-да-Кунья.
        Выпускается Королевским монетным двором и обозначается символом— £ (лат. либра), банковский код GBP.
    </string>
    <string name="ca_description">
        Канадский доллар – национальная валюта Канады, равен 100 центам. Международный банковский код – CAD, обозначение - C$, CA$, введен в обращение в 1858 году.
        Один канадский доллар равняется 100 центам.
    </string>
    <string name="cn_description">
        Жэньминьби - национальная валюта Китайской Народной Республики. Китайский юань - базовая платежная единица жэньминьби. Эмиссию осуществляет учрежденный в декабре 1948 года Народный банк Китая.
        Один юань равен 100 фэням или 10 цзяо. Международный валютный код CNY. Кроме сложной формы обозначения юаня в виде иероглифов, существует две упрощенные формы: 元 (развилка) и Ұ. Последний символ приобрел особую популярность в последнее время, он схож с японским ¥.
    </string>
    <string name="jp_description">
       Иена – национальная валюта Японии, введена в 1871 году. Наряду с долларом США и евро является резервной валютой мира. Международный валютный код иены - JPY, она обозначается символом ¥, в Японии - иероглифом 円.
    </string>
    <string name="ch_description">
       Швейцарский франк – национальная валюта Швейцарии и законное платёжное средство на территории двух государств - Швейцарии и Лихтенштейна. Код валюты CHF, обозначается символами ₣, Fr, sFr, делится на 100 сантимов.
    </string>
    <string name="dk_description">
      Датская крона - национальная денежная единица Дании, имеет хождение в ее автономной провинции Гренландии. Банковский код валюты – DKK, обозначение – kr. Крона содержит 100 эре. На Фарерских островах обращаются фарерские кроны, их номинал соответствует датским, дизайн банкнот оригинальный, курс обмена 1:1, без комиссии. Монеты на островах такие же, как и в Дании.
    </string>
    <string name="no_description">
      Крона - национальная валюта Норвегии, международный банковский код - NОК, обозначение – Kr, делится на 100 эре.
    </string>
    <string name="se_description">
      Шведская крона – национальная валюта Швеции, международный банковский код SEK. В 1873 году, как результат создания Скандинавского валютного союза, крона заменила собой имевший хождение на этой территории риксдалер.
    </string>
    <string name="ru_description">
      Рубль – национальная валюта Российской Федерации. С середины 19 века содержит 100 копеек. Международный валютный код - RUB, до 1998 года – RUR.
    </string>
    <string name="sg_description">
      Сингапурский доллар - национальная валюта Сингапура, международный код валюты - SGD, символ S$, равен 100 центов.
    </string>
    <string name="eu_description">
      Евро(знак валюты — €, банковский код: EUR) — официальная валюта 19 стран «еврозоны» (Австрии, Бельгии, Германии, Греции, Ирландии, Испании, Италии, Кипра, Латвии, Литвы, Люксембурга, Мальты, Нидерландов, Португалии, Словакии, Словении, Финляндии, Франции, Эстонии). Кроме того, евро используется в Черногории и Косово.
    </string>


    <!--my cards-->
    <string name="my_cards">My cards</string>

    <!--transactions-->
    <string name="transaction_title">Buying currency</string>
    <string name="transaction_added">The currency purchase was successful</string>
    <string name="transaction_not_added">The currency purchase was not successful</string>
    <string name="retry">RETRY</string>
    <string name="no_transactions">No Transactions</string>

</resources>