<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/start_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/end_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_toolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />

    <View
        android:id="@+id/half_cover_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/main_background"
        app:layout_constraintBottom_toTopOf="@id/currency_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/user_logo"
        android:layout_width="@dimen/user_logo_size"
        android:layout_height="@dimen/user_logo_size"
        android:src="@mipmap/default_user"
        app:layout_constraintBottom_toTopOf="@id/cards_see_all"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/ImageViewRounded"
        android:scaleType="centerCrop"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/greeting_user"
        style="@style/TextView.Greeting"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="wrap"
        android:text="@string/good_morning"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/user_logo"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/user_name"
        style="@style/TextView.UserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Ivan Ivanov"
        android:layout_marginEnd="16dp"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintEnd_toStartOf="@id/user_logo"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toTopOf="@id/rv_cards"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/greeting_user" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cards_see_all"
        style="@style/TextView.SeeAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_all"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBottom_toTopOf="@id/rv_cards"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        tools:listitem="@layout/main_card_item"
        android:orientation="horizontal"
        tools:itemCount="1"
        app:layout_constraintBottom_toTopOf="@id/currency_title"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/currency_title"
        style="@style/TextView.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/currency_title"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/rv_cards" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/currency_see_all"
        style="@style/TextView.SeeAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_all"
        app:layout_constraintBaseline_toBaselineOf="@+id/currency_title"
        app:layout_constraintEnd_toStartOf="@id/guideline_end" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="?attr/actionBarSize"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_animation"
        app:lottie_repeatMode="restart" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        style="@style/Button.Retry"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="?attr/actionBarSize"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_currencies"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_title"
        app:layout_constraintVertical_bias="0"
        tools:itemCount="3"
        tools:listitem="@layout/item_currency" />


</androidx.constraintlayout.widget.ConstraintLayout>